exports[`test Home renders with data 1`] = `
<div
  className="home">
  <span>
    xxx
  </span>
  <p>
    Home page
  </p>
  <button
    type="button">
    <a
      onClick={[Function]}
      style={Object {}}>
      Back
    </a>
  </button>
</div>
`;

exports[`test Home renders without data 1`] = `
<div
  className="home">
  <span>
    Loading...
  </span>
  <p>
    Home page
  </p>
  <button
    type="button">
    <a
      onClick={[Function]}
      style={Object {}}>
      Back
    </a>
  </button>
</div>
`;
